# cabal-solver-plan

./: .gitignore  CHANGELOG.md  README.md  cabal-solver-plan.cabal  cabal.project  flake.nix  fourmolu.yaml
.github/workflows/: ci.yml
app/: Main.hs  Options.hs  SetupDeps.hs  Solver.hs  SolverInterface.hs
app/SourcePackage/: Lens.hs
cabal-install-3.10.2.1/src/Distribution/Client/: ProjectPlanning.hs
