cabal-version:   3.0
name:            cabal-solver-plan
version:         0.1.0.0
license:         NONE
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable cabal-solver-plan
    import:           warnings
    main-is:          Main.hs
    other-modules:    SetupDeps
                    , Options
                    , SolverInterface
                    , SourcePackage.Lens
    build-depends:    base ^>= 4.18.2.1
                    , aeson ^>= 2.2.3.0
                    , binary ^>= 0.8.9.1
                    , bytestring ^>= 0.11.5.3
                    , filepath ^>= 1.4.300.1
                    , directory ^>= 1.3.8.5
                    , Cabal ^>= 3.10.0.0
                    , Cabal-syntax ^>= 3.10.0.0
                    , cabal-install ^>= 3.10.0.0
                    , cabal-install-solver ^>= 3.10.0.0
                    , containers ^>= 0.6.7
                    , data-fix ^>= 0.3.4
                    , hackage-security ^>= 0.6.2.6
                    , hackage-security-HTTP ^>= 0.1.1.2
                    , microlens ^>= 0.4.13.1
                    , monoidal-containers ^>= 0.6.5.0
                    , network-uri ^>= 2.6.4.2
                    , optparse-applicative ^>= 0.18.1.0
                    , prettyprinter ^>= 1.7.1
                    , recursion-schemes ^>= 5.2.3
                    , semialign ^>= 1.3.1
                    , tar ^>= 0.6.3.0
                    , text ^>= 2.0.2
                    , these ^>= 1.2.1
                    , time ^>= 1.12.2
    hs-source-dirs:   app
    default-language: GHC2021
